# rust_training

./: Cargo.toml  README.md
day1/src/: main.rs
day2/: Cargo.toml
day2/src/: lib.rs  main.rs  utility_files.rs
day3/: Cargo.toml
day3/src/: main.rs  v1.rs  v2.rs
day4/: Cargo.toml
day4/src/: lib.rs  main.rs  utility_async.rs  v1.rs  v2.rs
