[package]
name = "day4"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-recursion = "1.1.1"
clap = { version = "4.5.53", features = ["derive"] }
day2 = { version = "0.1.0", path = "../day2" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
